docs: update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webxdc-yjs-provider",
   "version": "3.0.1",
-  "description": "Sync webxdc app state with Yjs",
+  "description": "Sync webxdc app state automatically with Yjs",
   "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
